# liboptimization-dispatchers-blender

./: .gitignore  Makefile.am  blender.conf.ex  configure.ac
debian/: changelog  control  liboptimization2-dispatchers-blender.install
src/: Makefile.am  blender.cc  config.cc  config.hh  dispatcher.cc  dispatcher.hh
